karl package Changelog
======================

Unreleased
-----------

3.55 (2011-04-04)
-----------------

- Added 'karl.scripting.only_once' API, to permit cron-driven scripts to
  avoid running again if an earlier instance is still running.
  The lockfile is named '<username>-<progname>', where '<username> is the
  current user's login name, and '<progname>' is a string passed to
  'only_once'.  By default, the lockfile is created in '/var/run/karl/';
  this path can be overridden by setting 'lockdir' in the 'DEFAULT' section
  of the configuration file.

- Ensure that aliases for mailinglist objects are registered / deregistered
  when the mailinglist is added / removed.  (LP #706018).

- Get rid of some deprecation warnings under Python 2.6.

- Change default "People" tab link to '/people' since all instances now get a
  People Directory by default.

- Fix offices link in Admin UI to work when site is not rooted at '/'.  Also
  only show link when there are offices.

- Fixed invalid Unicode returned by 'pdftotext' which was breaking pgtextindex.

- Fixed the static view of the maintenance app to work when not rooted at '/'.

- Added support for 'read only' mode.

- Refactored logout view to not rely on repoze.who redirecting form plugin, in
  order to be able to generate the url to redirect to at runtime.  (LP #745215)

- Added default InvitationBoilerplate to allow Terms and Conditions and
  Privacy Policy to be set up without using a customization policy.

- Make sure templates always use ${api.app_url} in specifying hrefs.  Allows
  Karl to be mountable at places other than '/' at a particular domain.


3.54 (2011-01-19)
-----------------

- Fix people report picture views, broken by addition of report-based
  e-mail distribution lists. (LP #705171)

- Made report-based distribution lists addressable using "pretty" aliases.

- Implemented " Distribution lists on organizational reports" blueprint;  see: